--- a/profiles/install
+++ b/profiles/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 cat ./bashrc >> ~/.bashrc
-cp ./sshrc ~/.sshrc
+touch ~/.sshrc
 cp ./ssh.py ~/.ssh.py
 cp ./gitconfig ~/.gitconfig
 cp ./gitignore_global ~/.gitignore_global
